crates/dbt-jinja-utils/tests/snapshots/test_typechecking__noqa_only_suppresses_target_line.snap
---
source: crates/dbt-jinja-utils/tests/test_typechecking.rs
expression: snapshot
---
warnings:
  - line: 2
    col: 1
    file: test.jinja
    message: "Potential TypeError: Unknown local variable 'undefined2'"
