crates/dbt-jinja-utils/tests/snapshots/test_typechecking__typecheck_multiple_warnings_sorted.snap
---
source: crates/dbt-jinja-utils/tests/test_typechecking.rs
expression: snapshot
---
warnings:
  - line: 2
    col: 1
    file: test.jinja
    message: "Potential TypeError: Unknown local variable 'z'"
  - line: 3
    col: 1
    file: test.jinja
    message: "Potential TypeError: Unknown local variable 'a'"
  - line: 4
    col: 1
    file: test.jinja
    message: "Potential TypeError: Unknown local variable 'm'"
