crates/dbt-jinja-utils/tests/snapshots/test_typechecking__typecheck_with_context_variables.snap
---
source: crates/dbt-jinja-utils/tests/test_typechecking.rs
expression: snapshot
---
warnings:
  - line: 1
    col: 1
    file: test.jinja
    message: "Potential TypeError: Unknown local variable 'project_name'"
  - line: 1
    col: 20
    file: test.jinja
    message: "Potential TypeError: Unknown local variable 'schema_name'"
