crates/dbt-jinja-utils/tests/snapshots/test_typechecking__typecheck_with_dbt_functions.snap
---
source: crates/dbt-jinja-utils/tests/test_typechecking.rs
expression: snapshot
---
warnings: []
