crates/dbt-jinja-utils/tests/snapshots/test_typechecking__typecheck_with_noqa.snap
---
source: crates/dbt-jinja-utils/tests/test_typechecking.rs
assertion_line: 109
expression: snapshot
---
warnings: []
